Change caliper variant to profiling to enable better profiling support
Co-authored-by: Alan Dayton <dayton8@llnl.gov>

--- a/scripts/spack/configs/blueos_3_ppc64le_ib_p9/packages.yaml
+++ b/scripts/spack/configs/blueos_3_ppc64le_ib_p9/packages.yaml
@@ -120,6 +120,11 @@ packages:
     externals:
     - spec: libtool@2.4.2
       prefix: /usr
+  libunwind:
+    buildable: false
+    externals:
+    - spec: libunwind@8.0.1
+      prefix: /usr
   m4:
     buildable: false
     externals:
