--- a/scripts/spack/configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/spack/configs/toss_3_x86_64_ib/packages.yaml
@@ -100,6 +100,11 @@ packages:
     externals:
     - spec: libtool@2.4.2
       prefix: /usr
+  libunwind:
+    buildable: false
+    externals:
+    - spec: libunwind@8.0.1
+      prefix: /usr
   libx11:
     buildable: false
     externals:
