add elfutils external

--- a/scripts/spack/configs/blueos_3_ppc64le_ib_p9/packages.yaml
+++ b/scripts/spack/configs/blueos_3_ppc64le_ib_p9/packages.yaml
@@ -90,6 +90,11 @@ packages:
     externals:
     - spec: diffutils@3.3
       prefix: /usr
+  elfutils:
+    buildable: false
+    externals:
+    - spec: elfutils@0.176
+      prefix: /usr
   epoxy:
     buildable: false
     externals:
