feature: Adding error checking to the solid functional user defined types

--- a/src/serac/physics/materials/CMakeLists.txt
+++ b/src/serac/physics/materials/CMakeLists.txt
@@ -16,6 +16,7 @@ set(materials_headers
     solid_utils.hpp
     thermal_functional_material.hpp
     solid_functional_material.hpp
+    functional_material_utils.hpp
     )
 
 set(materials_depends
