--- a/src/serac/serac_config.hpp.in
+++ b/src/serac/serac_config.hpp.in
@@ -27,6 +27,7 @@
 // Compiler defines for TPLs
 #cmakedefine SERAC_USE_AXOM
 #cmakedefine SERAC_USE_CONDUIT
+#cmakedefine SERAC_USE_CUDA
 #cmakedefine SERAC_USE_FMT
 #cmakedefine SERAC_USE_HDF5
 #cmakedefine SERAC_USE_MFEM
