--- a/src/serac/serac_config.hpp.in
+++ b/src/serac/serac_config.hpp.in
@@ -12,7 +12,10 @@
 #define SERAC_VERSION_MINOR @SERAC_VERSION_MINOR@
 #define SERAC_VERSION_PATCH @SERAC_VERSION_PATCH@
 #define SERAC_VERSION_FULL  "@SERAC_VERSION_FULL@"
-#cmakedefine SERAC_GIT_SHA "@SERAC_GIT_SHA@"
+/*NOTE: Do not add SERAC_GIT_SHA here.  This will force
+ * full rebuild on all local changes. It is added in serac::version()
+ * and serac::about(), as well as accessible from serac::gitSha().
+ */
 
 
 // Serac Locations
@@ -21,15 +24,17 @@
 
 // General defines
 #cmakedefine SERAC_DEBUG
+
+#cmakedefine SERAC_USE_CUDA
 #cmakedefine SERAC_USE_LUMBERJACK
 
 
 // Compiler defines for TPLs
 #cmakedefine SERAC_USE_AXOM
 #cmakedefine SERAC_USE_CONDUIT
-#cmakedefine SERAC_USE_CUDA
 #cmakedefine SERAC_USE_FMT
 #cmakedefine SERAC_USE_HDF5
+#cmakedefine SERAC_USE_LUA
 #cmakedefine SERAC_USE_MFEM
 #cmakedefine SERAC_USE_MPI
 #cmakedefine SERAC_USE_TRIBOL
