--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,8 +140,11 @@ configure_file(
 
 message(STATUS "Serac Code Checks: ${SERAC_ENABLE_CODE_CHECKS}")
 
-# Add CUDA related files to code style checking list
+# Add extra file extensions for code styling
+# CUDA
 list(APPEND BLT_C_FILE_EXTS ".cuh")
+# Configured C++ files
+list(APPEND BLT_C_FILE_EXTS ".cpp.in")
 
 if (SERAC_ENABLE_CODE_CHECKS)
     serac_add_code_checks(PREFIX   serac
