--- a/src/serac/serac_config.hpp.in
+++ b/src/serac/serac_config.hpp.in
@@ -8,15 +8,16 @@
 #define SERAC_CONFIG_HPP
 
 // Serac Version Information
+// clang-format off
 #define SERAC_VERSION_MAJOR @SERAC_VERSION_MAJOR@
 #define SERAC_VERSION_MINOR @SERAC_VERSION_MINOR@
 #define SERAC_VERSION_PATCH @SERAC_VERSION_PATCH@
 #define SERAC_VERSION_FULL  "@SERAC_VERSION_FULL@"
+// clang-format on
 /*NOTE: Do not add SERAC_GIT_SHA here.  This will force
  * full rebuild on all local changes. It is added in serac::version()
  * and serac::about(), as well as accessible from serac::gitSha().
  */
-
 
 // Serac Locations
 #define SERAC_REPO_DIR "@SERAC_REPO_DIR@"
@@ -27,7 +28,6 @@
 
 #cmakedefine SERAC_USE_CUDA
 #cmakedefine SERAC_USE_LUMBERJACK
-
 
 // Compiler defines for TPLs
 #cmakedefine SERAC_USE_AXOM
@@ -42,5 +42,4 @@
 #cmakedefine SERAC_USE_RAJA
 #cmakedefine SERAC_USE_UMPIRE
 
-
-#endif  /* SERAC_CONFIG_CPP */
+#endif /* SERAC_CONFIG_CPP */
