--- a/src/serac/numerics/functional/tests/CMakeLists.txt
+++ b/src/serac/numerics/functional/tests/CMakeLists.txt
@@ -4,6 +4,8 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause)
 
+add_subdirectory(performance)
+
 # This test is all constexpr-evaluated, so it doesn't
 # actually need to run, if it compiles without error, the tests have passed
 blt_add_executable(NAME        tensor_unit_tests
@@ -37,21 +39,6 @@ set(functional_tests_mpi
 serac_add_tests( SOURCES ${functional_tests_mpi}
                  DEPENDS_ON gtest serac_functional serac_state ${functional_depends}
                  NUM_MPI_TASKS 4 )
-
-# not sure how we want to handle performance-related tests
-set(functional_performance_tests
-    performance/batched_shape_functions.cpp
-    performance/J2_material_with_AD.cpp
-    performance/diffusion_performance_test.cpp)
- 
-foreach(filename ${functional_performance_tests})
-    get_filename_component(test_name ${filename} NAME_WE)
-    blt_add_executable(NAME        ${test_name}
-                       SOURCES     ${filename}
-                       OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
-                       DEPENDS_ON  gtest serac_functional ${functional_depends}
-                       FOLDER      serac/tests )
-endforeach()
 
 if(ENABLE_CUDA)
 
