fix kernel launch parameters, +`const` correctness

--- a/src/serac/numerics/functional/tests/performance/CMakeLists.txt
+++ b/src/serac/numerics/functional/tests/performance/CMakeLists.txt
@@ -33,4 +33,6 @@ if(ENABLE_CUDA)
                            FOLDER      serac/tests )
     endforeach()
 
+    target_compile_options(batched_shape_functions_scalar_cuda PRIVATE --extended-lambda)
+
 endif()
