--- a/src/serac/numerics/functional/tests/CMakeLists.txt
+++ b/src/serac/numerics/functional/tests/CMakeLists.txt
@@ -11,7 +11,7 @@ add_subdirectory(performance)
 blt_add_executable(NAME        tensor_unit_tests
                    SOURCES     tensor_unit_tests.cpp
                    OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
-                   DEPENDS_ON  serac_functional ${functional_depends}
+                   DEPENDS_ON  gtest serac_functional ${functional_depends}
                    FOLDER      serac/tests)
 
 # Then add the examples/tests
