--- a/scripts/docker/dockerfile_gcc-11
+++ b/scripts/docker/dockerfile_gcc-11
@@ -23,4 +23,4 @@ RUN mkdir -p /home/serac/export_hostconfig
 RUN cp ./serac_repo/*.cmake /home/serac/export_hostconfig
 
 # Make sure the new hostconfig worked
-RUN cd serac_repo && python3 config-build.py -hc *.cmake -bp build && cd build && make -j && make -j test && cd /home/serac && rm -rf serac_repo
+RUN cd serac_repo && python3 config-build.py -hc *.cmake -bp build && cd build && make -j4 && make -j4 test && cd /home/serac && rm -rf serac_repo
