creates codevelop default val fixes #645

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,9 @@ endif()
 set(RAW_CMAKE_C_FLAGS   ${CMAKE_C_FLAGS}   CACHE STRING "")
 set(RAW_CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} CACHE STRING "")
 
+if (NOT DEFINED SERAC_ENABLE_CODEVELOP)
+    set(SERAC_ENABLE_CODEVELOP OFF)
+endif()
 message(STATUS "Serac Codevelop Build: ${SERAC_ENABLE_CODEVELOP}")
 
 #------------------------------------------------------------------------------
