test: Add the mesh tag reproducer test

--- a/src/serac/physics/tests/CMakeLists.txt
+++ b/src/serac/physics/tests/CMakeLists.txt
@@ -33,6 +33,7 @@ set(solver_tests
     serac_thermal_solid_solver.cpp
     serac_thermal_expansion.cpp
     serac_thermal_functional.cpp
+    solid_mech_mesh_tag.cpp
     )
 
 serac_add_tests( SOURCES ${solver_tests}
