hide not working files

--- a/scripts/testing/ats.sh.in
+++ b/scripts/testing/ats.sh.in
@@ -74,7 +74,7 @@ rm -rf $SYS_TYPE.*
 
 # Clean-up last run's output 
 # TODO: add a script to clean up output
-#rm -rf $ATS_SERAC_REPO_DIR/tests/integration/*/output
+#rm -rf $ATS_SERAC_REPO_DIR/tests/integration/*/*/_output
 
 # Run ATS
 $ATS_EXECUTABLE $ATS_SERAC_REPO_DIR/tests/integration/test.ats
