feature: Adding parameterized solid mechanics materials

--- a/src/serac/physics/materials/CMakeLists.txt
+++ b/src/serac/physics/materials/CMakeLists.txt
@@ -17,6 +17,7 @@ set(materials_headers
     thermal_functional_material.hpp
     parameterized_thermal_functional_material.hpp    
     solid_functional_material.hpp
+    parameterized_solid_functional_material.hpp
     functional_material_utils.hpp
     )
 
